# fhq-server

./: .clang-format  .code-check.json  .dockerignore  .gitignore  .snyk  .travis.yml  API.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTF Wall  CTF_wall  Dockerfile  Dockerfile.build-environment  Dockerfile.release-environment  Doxyfile  LICENSE  README.md  build_docker.sh  build_simple.sh  check-backend.sh  create_deb.sh  docker-compose.yml  freehackquest-backend.pro  freehackquest-backend.qrc  freehackquestd.pro  install.sh  pm.py  pythonreq  rebuild_environment_images.sh  reqh  run_travis.sh  sea5kg_cpplint.config  start_container.sh  uninstall.sh  upload_ppa.sh  wsjcpp.yml
code-check/: .gitignore  CMakeLists.txt  build_simple.sh  simple_code_checker.py
code-check/src/: config.cpp  config.h  helpers.cpp  helpers.h  line_checkers.cpp  line_checkers.h  logger.cpp  logger.h  main.cpp
code-check/src.wsjcpp/wsjcpp_core/: wsjcpp_core.h  wsjcpp_unit_tests.cpp  wsjcpp_unit_tests_main.cpp
code-check/unit-tests.wsjcpp/: CMakeLists.user-custom.txt
fhq-server/: .gitignore  CMakeLists.txt  build_simple.sh  check_code.sh  clean.sh  fhq-server.pro  main.cpp  sea5kg_cpplint.config  wsjcpp.yml
fhq-server/cmake/: FindPostgreSQL.cmake
fhq-server/debian/: changelog  config  control  copyright  install  postinst  rules  templates
fhq-server/install_files/: fhq-server.conf.sample
fhq-server/server2/: server2.pri
fhq-server/server2/include/: log.h
fhq-server/server2/sources/: log.cpp
fhq-server/src/: main.cpp
fhq-server/src.wsjcpp/: CMakeLists.txt
fhq-server/src.wsjcpp/nlohmann_json/: wsjcpp.hold.yml
fhq-server/src.wsjcpp/wsjcpp-hashes/: md5.cpp  md5.h  wsjcpp.hold.yml  wsjcpp_hashes.cpp
fhq-server/src.wsjcpp/wsjcpp_core/: generate.WsjcppUnitTest.wsjcpp-script  wsjcpp.hold.yml  wsjcpp_core.cpp  wsjcpp_core.h  wsjcpp_unit_tests.cpp  wsjcpp_unit_tests.h  wsjcpp_unit_tests_main.cpp
fhq-server/src.wsjcpp/wsjcpp_diff_text/: wsjcpp.hold.yml  wsjcpp_diff_text.h
fhq-server/src.wsjcpp/wsjcpp_employees/: generate.WsjcppEmploy  wsjcpp.hold.yml  wsjcpp_employees.cpp  wsjcpp_employees.h
fhq-server/src.wsjcpp/wsjcpp_geoip/: wsjcpp.hold.yml  wsjcpp_geoip.cpp  wsjcpp_geoip.h
fhq-server/src.wsjcpp/wsjcpp_hashes/: wsjcpp.hold.yml  wsjcpp_hashes.cpp  wsjcpp_hashes.h
fhq-server/src.wsjcpp/wsjcpp_jsonrpc2/: wsjcpp.hold.yml  wsjcpp_jsonrpc20.cpp  wsjcpp_jsonrpc20.h
fhq-server/src.wsjcpp/wsjcpp_levenshtein/: wsjcpp_levenshtein.cpp  wsjcpp_levenshtein.h
fhq-server/src.wsjcpp/wsjcpp_light_web_server/: generate.WsjcppLightWebHttpHandler  wsjcpp.hold.yml  wsjcpp_light_web_deque_http_requests.cpp  wsjcpp_light_web_deque_http_requests.h  wsjcpp_light_web_http_handler_rewrite_folder.cpp  wsjcpp_light_web_http_handler_rewrite_folder.h  wsjcpp_light_web_http_handler_web_folder.cpp  wsjcpp_light_web_http_handler_web_folder.h  wsjcpp_light_web_http_request.cpp  wsjcpp_light_web_http_request.h  wsjcpp_light_web_http_response.cpp  wsjcpp_light_web_http_response.h  wsjcpp_light_web_server.cpp  wsjcpp_light_web_server.h
fhq-server/src.wsjcpp/wsjcpp_parse_conf/: wsjcpp.hold.yml  wsjcpp_parse_conf.cpp  wsjcpp_parse_conf.h
fhq-server/src.wsjcpp/wsjcpp_print_tree/: wsjcpp.hold.yml  wsjcpp_print_tree.cpp  wsjcpp_print_tree.h
fhq-server/src.wsjcpp/wsjcpp_storages/: wsjcpp.hold.yml  wsjcpp_storages.cpp  wsjcpp_storages.h
fhq-server/src.wsjcpp/wsjcpp_validators/: wsjcpp.hold.yml  wsjcpp_validators.cpp  wsjcpp_validators.h
fhq-server/src.wsjcpp/wsjcpp_wsjcpp_hashes/: wsjcpp.hold.yml
fhq-server/src/cache/: cache.pri  create_memory_cache.cpp  create_memory_cache.h
fhq-server/src/cmd/: cmd_handler_base.cpp  cmd_handler_base.h  cmd_handlers.cpp  cmd_handlers.h  cmd_handlers.pri  cmd_handlers_classbook.cpp  cmd_handlers_classbook.h  cmd_handlers_communication.cpp  cmd_handlers_communication.h  cmd_handlers_events.cpp  cmd_handlers_events.h  cmd_handlers_games.cpp  cmd_handlers_games.h  cmd_handlers_leaks.cpp  cmd_handlers_leaks.h  cmd_handlers_lxd.cpp  cmd_handlers_lxd.h  cmd_handlers_mails.cpp  cmd_handlers_mails.h  cmd_handlers_quests.cpp  cmd_handlers_quests.h  cmd_handlers_quests_writeups.cpp  cmd_handlers_quests_writeups.h  cmd_handlers_server.cpp  cmd_handlers_server.h  cmd_handlers_support.cpp  cmd_handlers_support.h  cmd_handlers_useful_links.cpp  cmd_handlers_useful_links.h  cmd_handlers_users.cpp  cmd_handlers_users.h
fhq-server/src/core/: cmd_handlers.cpp  cmd_handlers.h  cmd_handlers1.h  employees.cpp  employees.h  export_libwsjcppcli_java_android.cpp  export_libwsjcppcli_java_android.h  export_libwsjcppcli_py.cpp  export_libwsjcppcli_py.h  export_libwsjcppcli_web_js.cpp  export_libwsjcppcli_web_js.h  export_list_of_handlers.cpp  export_struct_of_storage.cpp  fallen.cpp  fallen.h  jobs_pool.cpp  light_http_server.cpp  light_http_server.h  parse_config.cpp  parser_ip_api_com.cpp  parser_ip_api_com.h  storages.cpp  storages.h  validators_base.cpp  validators_base.h  websocketserver.cpp  websocketserver.h  wjscpp_employees.cpp  wjscpp_employees.h  wjscpp_validators.cpp  wjscpp_validators.h  wsjcpp_core.h  wsjcpp_employ_async_jobs.cpp  wsjcpp_employ_async_jobs.h  wsjcpp_employees.cpp  wsjcpp_employees.h  wsjcpp_export_libcli_web_js.cpp  wsjcpp_export_libcli_web_js.h  wsjcpp_settings.cpp  wsjcpp_settings.h  (+1 more)
fhq-server/src/datatypes/: datatype_base.h  datatype_game_state.h
fhq-server/src/employees/: employ_base.cpp  employ_base.h  employ_chats.cpp  employ_chats.h  employ_database.cpp  employ_database.h  employ_games.cpp  employ_games.h  employ_images.cpp  employ_images.h  employ_leaks.cpp  employ_leaks.h  employ_mails.cpp  employ_mails.h  employ_notify.cpp  employ_notify.h  employ_orchestra.cpp  employ_orchestra.h  employ_quests.cpp  employ_quests.h  (+13 more)
fhq-server/templates/: tmpl_create_new_storage_update.py
fhq-server/unit-tests/: .gitignore  CMakeLists.txt
fhq-server/unit-tests.wsjcpp/: .gitignore  CMakeLists.custom.txt  CMakeLists.txt  CMakeLists.user-custom.txt  build_simple.sh
unit-tests/: CMakeLists.txt  run_unit_tests.sh
unit-tests/src/: main.cpp
(+1951 files in other folders)
